fix: Trying to make up date formatting